some basica repo methods using xorm

--- a/modules/core/resources/templates/admin/index.html
+++ b/modules/core/resources/templates/admin/index.html
@@ -1,1 +1,1 @@
-{{ render "templates/admin/begin.html" }} YOUR CONTENT HERE {{ render "templates/admin/end.html" }}
+{{ render "core/resources/templates/admin/begin.html" }} {{ yield }} {{ render "core/resources/templates/admin/end.html" }}
