--- a/modules/core/resources/templates/admin/partials/main-header.html
+++ b/modules/core/resources/templates/admin/partials/main-header.html
@@ -52,7 +52,7 @@
                         <!-- Menu Footer-->
                         <li class="user-footer">
 
-                            <a href="/admin/logout" class="btn btn-danger btn-block" style="background-color: #dd4b39!important; color: white!important;">Sign out</a>
+                            <a href="/logout" class="btn btn-danger btn-block" style="background-color: #dd4b39!important; color: white!important;">Sign out</a>
 
                         </li>
                     </ul>
