--- a/modules/users/resources/views/frontend/login/index.html
+++ b/modules/users/resources/views/frontend/login/index.html
@@ -1,8 +1,8 @@
 <p class="login-box-msg" id="infoMessage">Sign in to start your session</p>
 <form action="/login" method="POST">
     <div class="form-group has-feedback">
-        <input type="email" class="form-control" name="identity" placeholder="Email">
-        <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+        <input type="text" class="form-control" name="username" placeholder="Username">
+        <span class="glyphicon glyphicon-user form-control-feedback"></span>
     </div>
     <div class="form-group has-feedback">
         <input type="password" class="form-control" name="password" placeholder="Password">
