--- a/modules/users/resources/views/frontend/login/index.html
+++ b/modules/users/resources/views/frontend/login/index.html
@@ -1,11 +1,11 @@
 <p class="login-box-msg" id="infoMessage">Sign in to start your session</p>
 <form action="/login" method="POST">
     <div class="form-group has-feedback">
-        <input type="text" class="form-control" name="username" placeholder="Username">
+        <input type="text" class="form-control" name="username" placeholder="Username" autocomplete="off">
         <span class="glyphicon glyphicon-user form-control-feedback"></span>
     </div>
     <div class="form-group has-feedback">
-        <input type="password" class="form-control" name="password" placeholder="Password">
+        <input type="password" class="form-control" name="password" placeholder="Password" autocomplete="off">
         <span class="glyphicon glyphicon-lock form-control-feedback"></span>
     </div>
     <div class="row">
